First pass header/footer + styling

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,7 @@ html {
 body {
   font-family: 'Georgia', serif;
   font-size: 1.6rem;
+  color: darkslategrey;
 }
 
 li {
@@ -47,16 +48,6 @@ hr {
   opacity: 0.6;
 }
 
-header {
-  padding: 2rem;
-  background: lightgreen;
-}
-
-footer {
-  padding: 2rem;
-  background: lightgreen;
-}
-
 .post {
   flex-direction: column;
   max-width: 64rem;
@@ -81,7 +72,7 @@ footer {
 
       li {
         background: lightgrey;
-        color: darkslategray;
+        color: darkslategrey;
         font-size: 1.4rem;
         text-transform: capitalize;
         letter-spacing: 1px;
@@ -101,6 +92,78 @@ footer {
 
     img {
       box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+    }
+  }
+}
+
+button {
+  display: flex;
+  gap: 0.4rem;
+  font-family: inherit;
+  background: none;
+  border: none;
+  font-size: inherit;
+  transition: all 0.3s;
+
+  cursor: pointer;
+
+  border-bottom: 1px dashed currentColor;
+
+  &:hover {
+    border-bottom: 1px dashed transparent;
+  }
+}
+
+header {
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+  gap: 2rem;
+  background-color: white;
+
+  span.logo {
+    font-size: 4rem;
+    white-space: nowrap;
+    font-family: 'Berkshire Swash', cursive;
+  }
+
+  nav {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+
+    ul {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 1rem;
+  color: white;
+  background-color: slategrey;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.social-links {
+  display: flex;
+  gap: 1rem;
+
+  li a i {
+    color: white;
+    opacity: 0.8;
+    transition: all 0.3s;
+
+    &:hover {
+      opacity: 1;
     }
   }
 }
