--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -34,7 +34,9 @@ img {
 }
 
 blockquote {
-  border-left: 5px solid lightgrey;
+  border-left: 5px solid lightseagreen;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
   padding-left: 1rem;
 }
 
@@ -71,8 +73,7 @@ hr {
       gap: 0.8rem;
 
       li {
-        background: lightgrey;
-        color: darkslategrey;
+        background: #00000010;
         font-size: 1.4rem;
         text-transform: capitalize;
         letter-spacing: 1px;
@@ -124,6 +125,7 @@ header {
   span.logo {
     font-size: 4rem;
     white-space: nowrap;
+    color: lightseagreen;
     font-family: 'Berkshire Swash', cursive;
   }
 
