--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,7 +17,7 @@ html {
 body {
   font-family: 'Georgia', serif;
   font-size: 1.6rem;
-  color: darkslategrey;
+  color: #333;
 }
 
 li {
@@ -48,6 +48,96 @@ hr {
 
 .muted {
   opacity: 0.6;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a.button {
+  opacity: 0.8;
+  transition: all 0.3s;
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 100vh;
+
+  span {
+    padding: 1rem 2rem;
+    border-radius: 5px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
+  }
+}
+
+.page {
+  padding: 2rem;
+}
+
+.home-hero {
+  display: flex;
+  width: 100%;
+
+  h1 {
+    font-size: 8rem;
+    max-width: 50%;
+    margin: 2rem;
+  }
+
+  img {
+    margin-left: auto;
+    max-width: 30%;
+    height: auto;
+  }
+}
+
+.post-card-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+}
+
+.post-card {
+  cursor: pointer;
+  margin: 2rem 0;
+  border-radius: 4px;
+  background-color: white;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  bottom: 0;
+  transition: all 0.3s;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  height: 28rem;
+  overflow: hidden;
+
+  .header {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem;
+  }
+
+  &:hover {
+    box-shadow: 0 7px 15px rgba(0, 0, 0, 0.1);
+    bottom: 0.3rem;
+  }
+
+  img {
+    flex: 1;
+    // Retain aspect ratio of image and hide overflow
+    object-fit: cover;
+    overflow: hidden;
+  }
 }
 
 .post {
@@ -152,7 +242,7 @@ footer {
   padding: 2rem;
   gap: 1rem;
   color: white;
-  background-color: slategrey;
+  background-color: #333;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
 }
 
