--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,6 @@
+@import 'colors';
+@import 'debug';
+
 * {
   margin: 0;
   padding: 0;
@@ -14,36 +17,32 @@ html {
   scroll-behavior: smooth;
 }
 
+hr {
+  margin-left: 2rem;
+  border: 2px solid $secondary !important;
+  width: 8rem !important;
+}
+
+.theme {
+  color: $primary;
+}
+
+p,
+a.button {
+  line-height: 1.8;
+  letter-spacing: 0.5px;
+  font-size: 1.8rem;
+}
+
 body {
   font-family: 'Georgia', serif;
   font-size: 1.6rem;
-  color: #333;
+  color: $light;
+  background-color: $dark;
 }
 
 li {
   list-style: none;
-}
-
-img {
-  width: 100%;
-}
-
-.caption {
-  opacity: 0.6;
-  text-align: center;
-}
-
-blockquote {
-  border-left: 5px solid lightseagreen;
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-  padding-left: 1rem;
-}
-
-hr {
-  border: none;
-  border-top: 1px solid lightgrey;
-  margin: 2rem 2rem;
 }
 
 .muted {
@@ -55,47 +54,55 @@ a {
   color: inherit;
 }
 
-a.button {
-  opacity: 0.8;
-  transition: all 0.3s;
-  &:hover {
-    opacity: 1;
-  }
+img#profile {
+  width: 100%;
+  object-fit: cover;
+  object-position: top;
+  margin-bottom: 4rem;
 }
 
-.loading {
+section.home {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  width: 100%;
-  height: 100vh;
-
-  span {
-    padding: 1rem 2rem;
-    border-radius: 5px;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
-  }
-}
-
-.page {
-  padding: 2rem;
-}
-
-.home-hero {
-  display: flex;
-  width: 100%;
-
-  h1 {
-    font-size: 8rem;
-    max-width: 50%;
-    margin: 2rem;
+  .header {
+    display: flex;
+    flex-direction: column;
   }
 
-  img {
-    margin-left: auto;
-    max-width: 30%;
-    height: auto;
+  .text-box {
+    margin: 4rem;
+    max-width: 64rem;
+
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+
+    h1 {
+      font-size: 6.4rem;
+    }
+
+    h2 {
+      font-size: 2.4rem;
+      letter-spacing: 1px;
+      line-height: 1.5;
+    }
+  }
+
+  ul#home-links {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: stretch;
+    gap: 1rem;
+
+    li {
+      width: 100%;
+      a.button {
+        width: 100%;
+      }
+    }
   }
 }
 
@@ -109,7 +116,7 @@ a.button {
   cursor: pointer;
   margin: 2rem 0;
   border-radius: 4px;
-  background-color: white;
+  background-color: $light;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   position: relative;
   bottom: 0;
@@ -118,7 +125,6 @@ a.button {
   flex-direction: column;
   gap: 0.8rem;
   height: 28rem;
-  overflow: hidden;
 
   .header {
     display: flex;
@@ -130,13 +136,6 @@ a.button {
   &:hover {
     box-shadow: 0 7px 15px rgba(0, 0, 0, 0.1);
     bottom: 0.3rem;
-  }
-
-  img {
-    flex: 1;
-    // Retain aspect ratio of image and hide overflow
-    object-fit: cover;
-    overflow: hidden;
   }
 }
 
@@ -180,57 +179,44 @@ a.button {
 
     line-height: 2.4rem;
     letter-spacing: 0.4px;
-
-    img {
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-    }
   }
 }
 
-button {
+a.button {
   display: flex;
-  gap: 0.4rem;
+  align-items: center;
+  gap: 0.8rem;
   font-family: inherit;
   background: none;
   border: none;
-  font-size: inherit;
   transition: all 0.3s;
+
+  color: $light;
+  width: fit-content;
 
   cursor: pointer;
 
-  border-bottom: 1px dashed currentColor;
+  padding: 1.6rem 2.4rem;
+  border: 1px solid $secondary;
 
   &:hover {
-    border-bottom: 1px dashed transparent;
+    border: 1px solid $light;
+  }
+
+  &.cta {
+    color: $dark;
+    background-color: $primary;
   }
 }
 
-header {
+.page {
   display: flex;
-  align-items: center;
-  padding: 2rem;
-  gap: 2rem;
-  background-color: white;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  height: 100vh;
+  height: -webkit-fill-available;
 
-  span.logo {
-    font-size: 4rem;
-    white-space: nowrap;
-    color: lightseagreen;
-    font-family: 'Berkshire Swash', cursive;
-  }
-
-  nav {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-
-    ul {
-      display: flex;
-      align-items: center;
-      gap: 1.2rem;
-    }
+  section {
+    flex: 1;
   }
 }
 
@@ -239,11 +225,15 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 4rem;
   gap: 1rem;
-  color: white;
-  background-color: #333;
+  color: $secondary;
+  background-color: $dark;
   box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
+
+  border-top: 1px dashed $secondary;
+  // background-color: $primary;
+  width: 100%;
 }
 
 .social-links {
@@ -251,7 +241,7 @@ footer {
   gap: 1rem;
 
   li a i {
-    color: white;
+    color: $light;
     opacity: 0.8;
     transition: all 0.3s;
 
