--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,11 +11,11 @@
   }
 
   opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+}
 
-  &:hidden {
-    opacity: 0;
-    transition: opacity 0.3s ease-in-out;
-  }
+.hidden {
+  opacity: 0;
 }
 
 html {
